--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,12 @@ keywords = ["matrix", "chat", "messaging", "federation", "social", "community"]
 tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
 
+# (De)serialization
+serde = { version = "1.0.216", features = ["derive"] }
+
+# Configuration parsing
+toml = "0.8.19"
+
 [profile.dev]
 incremental = true
 opt-level = 1
