--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,14 @@
-[package]
-name = "aksono"
+[workspace]
+members = ["src/bin", "src/common"]
+resolver = "2"
+
+[workspace.package]
 edition = "2021"
 rust-version = "1.82.0"
 license = "Apache-2.0"
 keywords = ["matrix", "chat", "messaging", "federation", "social", "community"]
 
-[dependencies]
+[workspace.dependencies]
 # Tracing
 tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
@@ -28,6 +31,10 @@ thiserror = { version = "2.0.9" }
 # Argument parsing
 argh = "0.1.13"
 
+[workspace.lints.rust]
+
+[workspace.lints.clippy]
+
 [profile.dev]
 incremental = true
 opt-level = 1
@@ -45,7 +52,3 @@ lto = 'thin'
 
 [profile.release.package."*"]
 opt-level = 3
-
-[lints.rust]
-
-[lints.clippy]
