--- a/src/common/Cargo.toml
+++ b/src/common/Cargo.toml
@@ -41,5 +41,8 @@ http-body-util = { workspace = true }
 # Byte abstractions
 bytes = { workspace = true }
 
+# URL
+url = { workspace = true }
+
 [lints]
 workspace = true
